<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/list_events"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/eventlist" />
        <item android:id="@+id/list_saved"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/savelist" />
        <item android:id="@+id/list_reminder"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/remindlist" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>